fixed the scrollbar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
+    user-select: none;
 }
 
 html{
@@ -14,6 +15,15 @@ body{
     color:#1e293b;
 
 }
+
+html {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+}   
 
 nav{
     position:sticky;
